# superplex3d_prototype

./: CMakeLists.txt  README.md  build_mingw32.sh  compile_supaplex  decomp.c  supaplex.idc  supaplex_debugger.asm  supaplex_def.h  supaplex_game.cpp  superplex_game.cpp
cmake/: CMakeLists.txt  GeneratePackedData.cmake  common.cmake  defines.cmake  pch.cmake
core/: CMakeLists.txt  atom.h  atom_table.cpp  atom_table.h  bit_array.h  clock.cpp  clock.h  common.cpp  common.h  exception.cpp  ext_io_device.cpp  ext_io_device.h  fixed_pool.h  logger.cpp  logger.h  memory_file.cpp  memory_file.h  signal.cpp  simple_file.cpp  simple_file_system.cpp  stack_trace.cpp  stack_trace.h  trolltech.cpp  trolltech.h  unicode.cpp  unique_id.cpp  unique_id.h  utility.cpp  utility.h  variant.h
data/: CMakeLists.txt  base.mtl  hardware1.mtl  hardware4.mtl  infotron_01.mtl  infotron_02.mtl  infotron_03.mtl  infotron_06.mtl  infotron_09.mtl  infotron_14.mtl  infotron_15.mtl  infotron_17.mtl  infotron_19.mtl  infotron_21.mtl  infotron_27.mtl  (+24 more)
engine/: CMakeLists.txt  casual_game.h  filesys.cpp  filesys.h  input.cpp  input.h  r_buffer.cpp  r_font.cpp  r_lightning.cpp  r_main.cpp  r_material.cpp  r_mesh.cpp  r_opengl.cpp  r_opengl.h  r_shader.cpp  r_terrain.cpp  r_texture.cpp  render.h  stdafx.h  sys_unix.cpp  sys_win32.cpp  system.cpp  zip_file.cpp  zip_file_system.cpp  zip_file_system.h  zip_io_handlers.cpp
engine/cmake/: Common.cmake  DisableWarnings.cmake  GeneratePackedData.cmake
engine/core/: cmake_config.h.in  common.h  exception.h  heap_manager.cpp  heap_manager.h  logger.cpp  logger.h  pointer.h  ref_counted.cpp  ref_counted.h  signal.cpp  signal.h  simple_file.cpp  simple_file.h  simple_file_system.cpp  simple_file_system.h  stack_trace.cpp  stack_trace.h  trolltech.cpp  unicode.h  utility.h  variant.cpp
engine/engine/: casual_game.cpp  casual_game.h  filesys.h  input.cpp  r_buffer.cpp  r_font.cpp  r_lightning.cpp  r_main.cpp  r_mesh.cpp  r_opengl.h  r_shader.cpp  r_texture.cpp  render.h  sys_unix.cpp  system.cpp  system.h  zip_file.cpp  zip_file.h  zip_io_handlers.cpp
engine/glsl_compiler/: CMakeLists.txt  glsl_compiler.cpp  glsl_compiler.h
engine/glsl_compiler/glapi/: glapi.c  glapi.h
engine/glsl_compiler/main/: config.h  glheader.h  imports.c  imports.h  mfeatures.h  shaders.h  shared.h
engine/glsl_compiler/shader/: prog_optimize.c  program.c  programopt.c  shader_api.c
engine/glsl_compiler/shader/grammar/: grammar_mesa.h
engine/glsl_compiler/shader/slang/: slang_ir.c  slang_vartable.c
engine/image/: CMakeLists.txt
engine/image/formats/dds/: dds_reader.cpp
engine/image/formats/jpeg/: jpeg_plugin.cpp  jpeg_reader.cpp
engine/image/formats/png/: png_plugin.cpp  png_plugin.h  png_reader.cpp  png_reader.h
engine/image/helpers/: image_format_reader_helper.h
engine/image/interfaces/: image_format_writer.h
engine/interfaces/: file_system.cpp  file_system.h  sound_manager.h
engine/math/: CMakeLists.txt  aabb.h  matrix.h  plane.cpp  quaternion.cpp  quaternion.h  ray.h  sphere.cpp  sphere.h  utility.h  vector3.h
engine/mesh/: CMakeLists.txt  mesh_material.cpp  mesh_material.h  vertex_buffer.cpp  vertex_buffer.h
engine/mesh/formats/wavefront_obj/: obj_loader.h  obj_plugin.cpp  obj_reader.cpp
engine/mesh/helpers/: mesh_format_reader_helper.cpp  mesh_format_reader_helper.h
engine/mesh/interfaces/: mesh_format_plugin.h  mesh_format_reader.h
engine/opengl/: CMakeLists.txt  context.h  glext.h  glxext.h  texture.cpp
engine/sound/: CMakeLists.txt  functions.cpp  ogg_stream.cpp  openal_context.cpp  openal_context.h  riff.cpp  sound_file.h  thread.cpp
engine/terrain/: patch.cpp  patch.h  patch_base.cpp  patch_base.h  patch_morph_hw.cpp  patch_morph_hw.h  patch_morph_sw.cpp  patch_morph_sw.h  pvs.cpp  pvs.h  terrain.cpp  terrain.h
engine/tools/packer/: packer.cpp
engine/tools/ttf2fnt/: ttf2fnt.cpp
engine/tools/ttf2fnt/ft/: glyph.cpp  library.cpp
games/lines/: CMakeLists.txt  a_star.cpp  a_star.h  a_star_state.cpp  a_star_state.h  a_star_state_base.cpp  a_star_state_base.h  ball.cpp  ball.h  lines_game.cpp  lines_game.h
games/lines/data/: arial25.fnt  button.dds  button.psd  button_pressed.dds  game_over_eng.dds  game_over_eng.psd  game_over_rus.dds  game_over_rus.psd  sphere.mtl
games/superplex/: CMakeLists.txt  supaplex_game.cpp  supaplex_game.h  superplex_game.h
games/superplex/data/: exit.mtl  hardware2.mtl  hardware3.mtl  hardware5.mtl  hardware6.mtl  hardware7.mtl  hardware8.mtl  hardware9.mtl  infotron_04.mtl  infotron_05.mtl  infotron_07.mtl  infotron_08.mtl  infotron_10.mtl  infotron_11.mtl  infotron_12.mtl  infotron_13.mtl  infotron_16.mtl  infotron_18.mtl  infotron_20.mtl  infotron_22.mtl  infotron_23.mtl  infotron_24.mtl  infotron_25.mtl  infotron_26.mtl  infotron_28.mtl  murphy_02.mtl  murphy_06.mtl  murphy_09.mtl  murphy_putdisk.mtl  murphy_shift.mtl  orange_disk.mtl  port_left.mtl  port_right.mtl  ram_chip_bottom.mtl  ram_chip_square.mtl  ram_chip_top.mtl  sniksnak_01.mtl  sniksnak_02.mtl  sniksnak_04.mtl  sniksnak_06.mtl  (+2 more)
image/: CMakeLists.txt  image_file.cpp  image_file.h
image/formats/dds/: dds_plugin.cpp  dds_plugin.h  dds_reader.h
image/formats/jpeg/: jpeg_plugin.h  jpeg_reader.cpp  jpeg_reader.h
image/formats/png/: png_reader.cpp
image/helpers/: image_format_reader_helper.cpp
image/interfaces/: image_format_plugin.h  image_format_reader.h
math/: CMakeLists.txt  camera.cpp  camera.h  matrix.cpp  plane.h  utility.h  vector2.h  vector4.h
mesh/: CMakeLists.txt  index_buffer.cpp  index_buffer.h  mesh_file.cpp  mesh_file.h  vertex_format.cpp  vertex_format.h
mesh/formats/wavefront_obj/: obj_loader.cpp  obj_plugin.h  obj_reader.h
mesh/interfaces/: mesh_format_writer.h
opengl/: CMakeLists.txt  context.h  display_list.h  glext.h  texture.h
sound/: CMakeLists.txt  functions.cpp  functions.h  ogg_stream.h  openal_context.cpp  openal_context.h  riff.h  sound_file.cpp  thread.h
tools/packer/: CMakeLists.txt
tools/ttf2fnt/: CMakeLists.txt  bmpfile.h  fntfile.h
tools/ttf2fnt/ft/: font.cpp  font.h  glyph.h  library.h
(+33 files in other folders)
