
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)

INCLUDE(CheckCCompilerFlag)
CHECK_C_COMPILER_FLAG("-w" HAVE_NO_WARNINGS)
IF(HAVE_NO_WARNINGS)
	ADD_DEFINITIONS(-w)
ENDIF()

ADD_SUBDIRECTORY(cmake)
ADD_SUBDIRECTORY(data)
ADD_SUBDIRECTORY(3rdparty)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(opengl)
ADD_SUBDIRECTORY(math)
ADD_SUBDIRECTORY(mesh)
ADD_SUBDIRECTORY(interfaces)
ADD_SUBDIRECTORY(image)
ADD_SUBDIRECTORY(sound)
ADD_SUBDIRECTORY(engine)
ADD_SUBDIRECTORY(games)
ADD_SUBDIRECTORY(tools)
