
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)

PROJECT(engine)

INCLUDE(cmake/Common.cmake)
INCLUDE(cmake/DisableWarnings.cmake)

ADD_SUBDIRECTORY(3rdparty)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(opengl)
ADD_SUBDIRECTORY(math)
ADD_SUBDIRECTORY(mesh)
ADD_SUBDIRECTORY(image)
ADD_SUBDIRECTORY(sound)
ADD_SUBDIRECTORY(engine)
ADD_SUBDIRECTORY(tools)
