
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)

PROJECT(packer)

INCLUDE(${CMAKE_SOURCE_DIR}/cmake/common.cmake)
INCLUDE(${CMAKE_SOURCE_DIR}/cmake/defines.cmake)

INCLUDE_DIRECTORIES(
	${common_SOURCE_DIR}
	${zlib_SOURCE_DIR}
)

ADD_EXECUTABLE(packer

	packer.cpp

)

SETUP_TARGET(packer)
TARGET_LINK_LIBRARIES(packer minizip zlib)

SET_TARGET_PROPERTIES(packer PROPERTIES
	OUTPUT_NAME "packer"
	SUFFIX ".exe"
)
